<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/holo_purple"
    android:padding="8dp">

<TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_title"
        android:textSize="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:hint="@string/title_hint"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:inputType="text"
        android:textSize="25sp"
        android:importantForAutofill="yes"
        android:autofillHints="text"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_title"
        android:textSize="30sp"
        android:layout_below="@id/titleEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextView"
        android:layout_marginTop="16dp"
        android:hint="@string/description_hint"
        android:padding="16dp"
        android:textSize="25sp"
        android:inputType="textMultiLine"
        android:importantForAutofill="yes"
        android:autofillHints="textMultiLine"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        />

    <!-- Due Date EditText -->
    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_title"
        android:textSize="30sp"
        android:layout_below="@id/descriptionEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/dueDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dueDateLabel"
        android:layout_marginTop="16dp"
        android:hint="@string/due_date_hint"
        android:padding="16dp"
        android:textSize="25sp"
        android:inputType="date"
        android:importantForAutofill="yes"
        android:autofillHints="date"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        />

    <!-- Priority Spinner -->
    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/dueDateEditText"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:entries="@array/priority_options"
        style="@style/SpinnerPriorityStyle" />

    <!-- Category Spinner -->
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/prioritySpinner"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:entries="@array/category_options"
        style="@style/SpinnerCategoryStyle" />

    <!-- Status Spinner -->
    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/categorySpinner"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:entries="@array/status_options"
        style="@style/SpinnerStatusStyle" />

    <Button
        android:id="@+id/btnAddTask" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusSpinner"
        android:layout_marginTop="16dp"
        android:text="@string/add_task"
        android:padding="25dp"/>
</RelativeLayout>


